<?xml version="1.0" encoding="utf-8"?><!--
 * Copyright (C) 2012 Paul Burke
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 -->
<resources>
    <string name="app_name">바디게이션</string>
    <string name="tab1">몸과 운동</string>
    <string name="home">홈</string>
    <string name="tab2">동영상 따라하기</string>
    <string name="tab3">음식과 영양</string>
    <string name="tab4">트레이너와 영양사</string>
    <string name="tab5">금주의 자료</string>
    <string name="action_settings">Settings</string>
    <string name="menu_night_mode">Night mode</string>
    <string name="menu_night_mode_system">Follow system</string>
    <string name="menu_night_mode_day">Day (always)</string>
    <string name="menu_night_mode_night">Night (always)</string>
    <string name="menu_night_mode_auto">Auto</string>
    <string name="trainer_info">내가 누구게?</string>
    <string name="foodcategory">음식과 영양</string>
    <string name="bodyinfocategory">몸과 운동</string>
    <string name="exerciseinfocategory">관련 운동정보</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">이름</string>
    <string name="nicname">활동명</string>
    <string name="facephoto">사진</string>
    <string name="bodyphoto">전신사진</string>
    <string name="avatar">아바타</string>
    <string name="call">연락처</string>
    <string name="Associaition">발급기관</string>
    <string name="license">자격증</string>
    <string name="licensedata">자격증 자료</string>
    <string name="award">수상 및 입상경력</string>
    <string name="awarddata">수상 및 입상 자료</string>
    <string name="email">이메일</string>
    <string name="messenger">메신저</string>
    <string name="licensename">자격증명 :</string>
    <string name="licencecheck">검증여부 :</string>
    <string name="awardname">입상 및 수상 명</string>
    <string name="awardcheck">검증과정</string>
    <string name="upper">상체</string>
    <string name="lower">하체</string>
    <string name="spine">척추</string>
    <string name="writer">작성자 :</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="qnawriteexample"> 질문제목 : \n질문내용 : \n질문자 :\n추가적인 자료나 부가할만한 것들 :</string>
    <string name="title">제목 :</string>
    <string name="content">- 내용 -</string>
    <string name="sempletitle">제목</string>
    <string name="set">새트 수</string>
    <string name="time">시간(단위 )</string>
    <string name="breaktime">휴식시간(단위 )</string>
    <string name="permission_request_camera">카메라사용에 대한 허가를 요청합니다.</string>
    <string name="permission_request_file">저장소사용에 대한 허가를 요청합니다.</string>
    <string name="camera_error">현재 사용되어진 기기는 카메라가 지원되지 않는 기기입니다.</string>
    <string name="nickname">닉네임 :</string>
    <string name="expertpart">전문분야 :</string>
    <string name="category">카테고리</string>
    <string name="acount">사용자 계정</string>
    <string name="upperbone">상체골격</string>
    <string name="lowerbone">하체골격</string>
    <string name="lowermuscle">하체근육</string>
    <string name="upper_info">상체 정보</string>
    <string name="upper_exer">상체 운동</string>
    <string name="lower_info">하체 정보</string>
    <string name="lower_exer">하체 운동</string>
    <string name="stretching">스트레칭</string>
    <string name="food_fat">다이어트식단</string>
    <string name="food_diet">몸매관리식단</string>
    <string name="food_powerup">근력향상식단</string>
    <string name="food_muscleup">근육증가식단</string>
    <string name="food_metabolic">대사증후군 식단</string>
    <string name="account">계정</string>
    <string name="qna">묻고 답하기</string>
    <string name="qna_write">질문하기</string>
    <string name="selfmassage">자가마사지</string>
    <string name="follow">동영상 따라하기</string>
    <string name="writer_menu">트레이너와 영양사</string>
    <string name="follow_core">코어운동 따라하기</string>
    <string name="follow_breth">유산소운동 따라하기</string>
    <string name="follow_muscleup">근육증가 운동 따라하기</string>
    <string name="follow_stretching">스트레칭 따라하기</string>
    <string name="newsorce">금주의 새로운 자료</string>
    <string name="new_writer">금주 새로 오신 선생님</string>
    <string name="popular_writer">인기 선생님 Top 10</string>
    <string name="popural_sorce">주목받는 자료 Top 10</string>
    <string name="like">유용한 정보입니다. 추천드려요</string>
    <string name="facebook">페이스북 계정으로 로그인</string>
    <string name="googleaccount">구글계정으로 로그인</string>
    <string name="kakao">카카오계정으로 로그인</string>
    <string name="join_out">탈퇴신청</string>
    <string name="join">가입신청</string>
    <string name="user_information">나의 정보</string>
    <string name="id_user">ID</string>
    <string name="password">비밀번호</string>
    <string name="login">로그인</string>
    <string name="password_ck">비밀번호 확인</string>
    <string name="weight">체중 변화</string>
    <string name="tall">키 :</string>
    <string name="hope">운동을 하는 이유</string>
    <string name="cancel">취소</string>
    <string name="explain_text">자동으로 입력되는 수치는 키에 따른 평균 수치이며\n
                                    체성분 분석(흔히 인바디라 부르는)이 가능한 곳에서\n
                                    월 1회정도 분석을 하신 후 그 자료와 비교를 해보세요\n\n
                                    체중보다는 체지방률과 골격근량을 판단기준으로 삼고\n
                                    알맞은 운동과 식단, 그리고 계획을 준비하면\n
                                    원하는 목표에 다가갈 수 있을 것입니다.\n
         또한 해당 자료는 단순 참고용 이므로 \n너무 수치에 연연하지 말고
        \n자신의 모습을 월 단위로 비교하여 보는 것이 \n가장 바람직 한 운동의 결과를 체크하는 방법입니다. </string>
    <string name="follow_media">따라하기</string>
    <string name="internal_storage">내부 저장소</string>
    <string name="chooser_title">동영상 불러오기</string>
    <string name="apptest"> 현재 이 앱은 테스트 중에 있습니다. \n아직 개발과 수정이 이루어 지고 있으니 \n정식버전이 출시되기 전까지 \n많은 관심과 피드백을 부탁드리며 \n주변분들에게 널리 알려주시기 바랍니다.</string>
    <string name="empty_directory">빈 디렉토리</string>
    <string name="storage_removed">저장소가 제거되었습니다.</string>
    <string name="choose_file">파일 선택</string>
    <string name="error_selecting_file">파일 선택 오류</string>
    <string name="tutorialtext">다음부터 이 페이지를 보지 않겠습니다.</string>
    <string name="menututorial">앱을 시작할때 사용설명 페이지를 보겠습니다.</string>
    <string name="testtabtitle">테스트\n타이틀</string>
    <string name="expand">몸과 운동</string>
    <string name="more">더보기</string>
    <string name="trainer">트레이너</string>
    <string name="nutriat">영양사와 요리사</string>
    <string name="title_dashboard">대쉬보드</string>
    <string name="title_notifications">알림</string>
    <string name="title_setting">설정</string>
    <string name="title_infome">나의 경로</string>
    <string name="title_goal">달성 목표</string>
    <string name="myweight">현재 체중</string>
    <string name="mybmi">현재 BMI</string>
    <string name="mybodyfat">현재 체지방률</string>
    <string name="mysubcutaneousfat">현재 피하지방</string>
    <string name="mymusclemass">현재 골격근량</string>
    <string name="myvisceralfat">현재 내장지방 :</string>
    <string name="desweight">목표 체중</string>
    <string name="desbmi">목표 BMI</string>
    <string name="masbodyfat">목표 체지방량</string>
    <string name="mymasbodyfat">현재 체지방량</string>
    <string name="desmusclemass">평균체중 골격근량</string>
    <string name="weight_musclemass">내 체중의 평균 골격근량</string>
    <string name="dessubcutaneousfat">목표 피하지방</string>
    <string name="desvisceralfat">목표 내장지방</string>
    <string name="woman">여성</string>
    <string name="man">남성</string>
    <string name="mainbodyfat">표준 체지방률</string>
    <string name="fitweight">당신의 적정\n체중은</string>
    <string name="fitbmi">당신의 적정\nBMI는</string>
    <string name="fitbodyfat">당신의 적정\n체지방은</string>
    <string name="fitmusclemass">당신의 적정\n골격근량은</string>
    <string name="fitsubcutaneousfat">당신의\n적정 피하지방은</string>
    <string name="fitvisceralfat">당신의 적정\n내장지방은</string>
    <string name="movie">자료보기</string>
    <string name="pop_week">주간 인기 영상</string>
    <string name="new_week">새로 올라온 영상</string>
    <string name="bmi">BMI 변화</string>
    <string name="bodyfat">체지방 변화</string>
    <string name="musclemass">골격근량 변화</string>
    <string name="fitheghit">아쉽게도 키는 목표를 잡을 수가 없네요</string>
    <string name="test_server_client_id">669763084628-ei3h7tsecic687lsiokoh6jifoghdc1l.apps.googleusercontent.com</string>
    <string name="server_client_id">669763084628-1ek5dvhohsa9vcoheksedq2ct6sq9lp0.apps.googleusercontent.com</string>
    <string name="web_client_id">669763084628-th6pt9qiplfag9asasjb5p822cbk2592.apps.googleusercontent.com</string>
    <string name="API_key">AIzaSyCYPFWdlydMAZtuoQaj7dmOk4VjQYJDK94</string>
    <string name="Server_API_key">AIzaSyD-GHRyRHTF2ijQ_x51h1yeTYAf7X1AZYQ</string>
    <string name="default_sign_in_button">구글 계정과 연동 합니다.</string>
    <string name="custom_sign_in_button">다른 구글 계정으로 연동합니다.</string>
    <string name="sign_in">로그인</string>
    <string name="sign_out">로그아웃</string>
    <string name="weight_excercise">근력운동</string>
    <string name="arm">팔</string>
    <string name="leg">다리</string>
    <string name="abs">복근</string>
    <string name="waist">허리</string>
    <string name="chest">가슴</string>
    <string name="back">등</string>
    <string name="shoulder">어깨</string>
    <string name="house">집에서</string>
    <string name="office">사무실에서</string>
    <string name="car">자동차안에서</string>
    <string name="excercise_category">운동 종류</string>
    <string name="section">운동 부위</string>
    <string name="place">운동장소</string>
    <string name="search">검색</string>
    <string name="failed">유튜브 계정연결에 실패했습니다</string>
    <string name="permission_request">카메라사용에 대한 허가를 요청합니다.</string>
    <string name="walk">걸음 수</string>
    <string name="caloreb">기초대사량</string>
    <string name="calore">하루 총 소모 칼로리</string>
    <string name="mylist">내가 본 영상</string>
    <string name="prev">Previous</string>
    <string name="next">Next</string>
    <string name="menu">menu</string>
    <string name="pesnaldatarefresh">사용자 데이터 새로고침</string>
    <string name="accountchange">계정바꾸기</string>
    <string name="request_permission">카메라에 대한 사용을 요청합니다.</string>
    <string name="upload">데이터 업로드</string>
</resources>