<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<!--
        <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/main_home_selector"
            android:title="@string/movie" /> -->
        <item
            android:id="@+id/navigation_goal"
            android:enabled="true"
            android:icon="@drawable/select_goalmenu"
            android:title="@string/title_goal" />
        <item
            android:id="@+id/navigation_follow"
            android:enabled="true"
            android:icon="@drawable/select_followmenu"
            android:title="@string/follow_media" />
        <item
            android:id="@+id/navigation_infome"
            android:enabled="true"
            android:icon="@drawable/select_formemenu"
            android:title="@string/title_infome" />
</menu>
