<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="bodygate.bcns.bodygation.navigationitem.GoalFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/man_RBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:text="@string/man" />

        <RadioButton
            android:id="@+id/girl_RBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:text="@string/woman" />
    </LinearLayout>

    <TextView
        android:id="@+id/goal_height_fitlbl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="3dp"
        android:paddingStart="3dp"
        android:text="@string/fitheghit" />

    <LinearLayout
        android:id="@+id/goal_height_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:paddingBottom="1dp"
        android:paddingTop="1dp">

        <TextView
            android:id="@+id/goal_height_lbl"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingEnd="5dp"
            android:paddingLeft="3dp"
            android:text="@string/tall"
            android:textAlignment="viewEnd" />

        <EditText
            android:id="@+id/goal_height_txtB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp"
            android:layout_weight="1"
            android:autoText="false"
            android:ems="10"
            android:inputType="none|number"
            android:paddingStart="30dp"
            android:textAlignment="textStart"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/goal_weight_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="vertical"
        android:paddingBottom="1dp"
        android:paddingTop="1dp">

        <TextView
            android:id="@+id/goal_weight_fitlbl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_weight="1"
            android:paddingStart="3dp"
            android:text="@string/fitweight" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/my_weight_lbl"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:paddingEnd="5dp"
                android:paddingLeft="3dp"
                android:text="@string/myweight"
                android:textAlignment="viewEnd" />

            <EditText
                android:id="@+id/my_weight_txtB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="2dp"
                android:layout_weight="1"
                android:autoText="false"
                android:ems="10"
                android:inputType="none|number"
                android:paddingStart="30dp"
                android:text="35"
                android:textAlignment="textStart"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/goal_weight_lbl"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:paddingEnd="5dp"
                android:paddingLeft="3dp"
                android:text="@string/desweight"
                android:textAlignment="viewEnd" />

            <TextView
                android:id="@+id/goal_weight_txtB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="2dp"
                android:layout_weight="1"
                android:autoText="false"
                android:ems="10"
                android:inputType="number"
                android:paddingStart="30dp"
                android:textAlignment="textStart"
                android:textSize="15sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/goal_bmi_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="vertical"
        android:paddingBottom="1dp"
        android:paddingTop="1dp">

        <TextView
            android:id="@+id/goal_bmi_fit_lbl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_weight="1"
            android:paddingStart="3dp"
            android:text="@string/fitbmi" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/my_bmi_lbl"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:paddingEnd="5dp"
                android:paddingLeft="3dp"
                android:text="@string/mybmi"
                android:textAlignment="viewEnd" />

            <EditText
                android:id="@+id/my_bmi_txtB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="2dp"
                android:layout_weight="1"
                android:autoText="false"
                android:ems="10"
                android:inputType="none|number"
                android:paddingStart="30dp"
                android:text="35"
                android:textAlignment="textStart"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/goal_bmi_lbl"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:paddingEnd="5dp"
                android:paddingLeft="3dp"
                android:text="@string/desbmi"
                android:textAlignment="viewEnd" />

            <TextView
                android:id="@+id/goal_bmi_txtB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="2dp"
                android:layout_weight="1"
                android:autoText="false"
                android:ems="10"
                android:inputType="number"
                android:paddingStart="10dp"
                android:textAlignment="textStart"
                android:textSize="15sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/goal_bodyfat_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="vertical"
        android:paddingBottom="1dp"
        android:paddingTop="1dp">

        <TextView
            android:id="@+id/goal_bodyfat_fit_lbl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_weight="1"
            android:paddingStart="3dp"
            android:text="@string/fitbodyfat" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/my_bodyfat_lbl"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:paddingEnd="5dp"
                android:paddingLeft="3dp"
                android:text="@string/mybodyfat"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/my_bodyfat_txtB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="2dp"
                android:layout_weight="1"
                android:autoText="false"
                android:ems="10"
                android:inputType="none|number"
                android:paddingStart="30dp"
                android:text="35"
                android:textAlignment="textStart"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/goal_bodyfat_lbl"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:text="@string/mainbodyfat"
                android:textAlignment="viewEnd" />

            <TextView
                android:id="@+id/goal_bodyfat_txtB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="2dp"
                android:layout_weight="1"
                android:autoText="false"
                android:ems="10"
                android:inputType="number"
                android:paddingStart="10dp"
                android:textAlignment="center"
                android:textSize="15sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/goal_musclemass_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="vertical"
        android:paddingBottom="1dp"
        android:paddingTop="1dp">

        <TextView
            android:id="@+id/goal_musclemass_fit_lbl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_weight="1"
            android:paddingStart="3dp"
            android:text="@string/fitmusclemass" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/my_musclemass_lbl"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:paddingEnd="5dp"
                android:paddingLeft="3dp"
                android:text="@string/mymusclemass"
                android:textAlignment="viewEnd" />

            <EditText
                android:id="@+id/my_musclemass_txtB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="2dp"
                android:layout_weight="1"
                android:autoText="false"
                android:ems="10"
                android:inputType="none|number"
                android:paddingStart="30dp"
                android:text="35"
                android:textAlignment="textStart"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/goal_musclemass_lbl"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:paddingEnd="5dp"
                android:paddingLeft="3dp"
                android:text="@string/desmusclemass"
                android:textAlignment="viewEnd" />

            <TextView
                android:id="@+id/goal_musclemass_txtB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:layout_marginTop="2dp"
                android:layout_weight="1"
                android:autoText="false"
                android:ems="10"
                android:inputType="number"
                android:paddingStart="30dp"
                android:textAlignment="textStart"
                android:textSize="15sp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
