<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="bodygate.bcns.bodygation.navigationitem.MovieFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/new_lbl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:paddingStart="10dp"
        android:text="@string/new_week"
        android:textSize="28sp" />
    <android.support.v7.widget.RecyclerView
        android:id="@+id/new_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/fragment_item" />

    <TextView
        android:id="@+id/pop_lbl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:paddingStart="10dp"
        android:text="@string/pop_week"
        android:textSize="28sp" />
    <android.support.v7.widget.RecyclerView
        android:id="@+id/pop_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/fragment_item" >

    </android.support.v7.widget.RecyclerView>

    <TextView
        android:id="@+id/my_lbl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:paddingStart="10dp"
        android:text="@string/mylist"
        android:textSize="28sp" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/my_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/fragment_item" />

</LinearLayout>
